--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jhamat/testimonial",
+    "name": "jhamat/testimonial-module",
     "type": "laravel-module",
     "description": "",
     "require": {
